// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopoverTitle is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopoverTitle testClass1 testClass2 css-rqt07g-euiPopoverTitle-l"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPopoverTitle props paddingSize l is rendered 1`] = `
<div
  class="euiPopoverTitle css-rqt07g-euiPopoverTitle-l"
/>
`;

exports[`EuiPopoverTitle props paddingSize m is rendered 1`] = `
<div
  class="euiPopoverTitle css-1m5c4fw-euiPopoverTitle-m"
/>
`;

exports[`EuiPopoverTitle props paddingSize none is rendered 1`] = `
<div
  class="euiPopoverTitle css-16aebuh-euiPopoverTitle"
/>
`;

exports[`EuiPopoverTitle props paddingSize s is rendered 1`] = `
<div
  class="euiPopoverTitle css-bddi23-euiPopoverTitle-s"
/>
`;

exports[`EuiPopoverTitle props paddingSize xl is rendered 1`] = `
<div
  class="euiPopoverTitle css-kptoft-euiPopoverTitle-xl"
/>
`;

exports[`EuiPopoverTitle props paddingSize xs is rendered 1`] = `
<div
  class="euiPopoverTitle css-1fc2srw-euiPopoverTitle-xs"
/>
`;
